--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glassmorphiss Card Design - Easy Tutorials</title>
+    <title>Paulus Sesa UI Design Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
